Fixes alignment issues

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -23,6 +23,7 @@ body {
   background-color: #e8e8e8;
   -webkit-font-smoothing: antialiased;
   font-size: 100%;
+  text-align: center;
 }
 
 strong {
