--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -3,10 +3,6 @@
   margin: 0 auto;
 }
 
-.content-container {
-  margin-left: 1em;
-}
-
 body>header {
   text-align: left;
   background-color: #333;
